massive cleanup step